--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "start-dev": "ng serve",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,12 +21,7 @@
     "@angular/router": "~13.0.0",
     "@nebular/eva-icons": "9.0.3",
     "@nebular/theme": "^9.0.3",
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "config": "^3.3.7",
-    "cors": "^2.8.5",
     "eva-icons": "^1.1.2",
-    "express": "^4.18.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -38,7 +32,6 @@
     "@angular/compiler-cli": "~13.0.0",
     "@schematics/angular": "~13.0.3",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
